#  Part of MariaDB Manager package.
#
# This file is distributed as part of MariaDB Manager.  It is free
# software: you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation,
# version 2.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51
# Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
# Copyright 2013-2014 (c) SkySQL Corporation Ab
#
# Author: Massimo Siani
# Date: August 2013
#




CHANGELOG

* Thu Feb 27 2014 Massimo Siani <massimo.siani@skysql.com>
- Merge develop and release-1.0.1

* Fri Feb 21 2014 Massimo Siani	<massimo.siani@skysql.com>
- Fix Copyright and files headers

* Thu Feb 20 2014 Massimo Siani	<massimo.siani@skysql.com>
- Bump to version 1.7-121

* Tue Feb 18 2014 Massimo Siani	<massimo.siani@skysql.com>
- Fix pom.xml
- Merge Timofey's changes

* Thu Feb 13 2014 Massimo Siani	<massimo.siani@skysql.com>
- Deleted duplicate pom.xml

* Wed Feb 12 2014 Massimo Siani <massimo.siani@skysql.com>
- Fix API call for bulk data

* Fri Dec 13 2013 Massimo Siani <massimo.siani@skysql.com>
- Do not start the Monitor after installation

* Wed Dec 11 2013 Massimo Siani <massimo.siani@skysql.com>
- Add key generation upon install

* Fri Nov 29 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix headers date

* Thu Nov 28 2013 Massimo Siani <massimo.siani@skysql.com>
- Change API call monitorclass/galera/key to monitorclass/galera

* Thu Nov 21 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix headers
- Fix bug on Monitor version

* Tue Nov 19 2013 Massimo Siani <massimo.siani@skysql.com>
- Register Monitor version every 30 seconds