@@ -22,6 +22,7 @@ import java.math.BigInteger;
 import java.text.DecimalFormat;
 import java.util.*;
 
+import com.skysql.java.AboutMe;
 import com.skysql.java.Logging;
 
 /**
@@ -39,7 +40,8 @@ import com.skysql.java.Logging;
  */
 public class ClusterMonitor extends Thread {
 	/** The Monitor version number. */
-	private final static String		MONITOR_VERSION = "1.7-121";
+	private final static String		MONITOR_VERSION = "1.7-122";
+	private final static String		MONITOR_RELEASE = "1.0.2";
 	/**
 	 * The ID of the system we are monitoring. This is
 	 * read from the arguments list.
@@ -98,7 +100,8 @@ public class ClusterMonitor extends Thread {
 		Logging.info("Starting ClusterMonitor v" + MONITOR_VERSION);
 		Logging.info("==============================");
 		mondata monitorData = new mondata();
-		monitorData.registerAPI(MONITOR_VERSION);
+		monitorData.registerAPI(MONITOR_VERSION, MONITOR_RELEASE);
+		monitorData.registerAPI("libMariaDB-Manager-java", AboutMe.VERSION, AboutMe.RELEASE);
 		
 		if (args[off].equalsIgnoreCase("all"))
 		{
@@ -119,7 +122,8 @@ public class ClusterMonitor extends Thread {
 					monitor.start();
 					m_threadMap.put(i, monitor);
 				}
-				monitorData.registerAPI(MONITOR_VERSION);
+				monitorData.registerAPI(MONITOR_VERSION, MONITOR_RELEASE);
+				monitorData.registerAPI("libMariaDB-Manager-java", AboutMe.VERSION, AboutMe.RELEASE);
 				if (systems.isEmpty() && m_systems_old.isEmpty()) {
 					Logging.warn("No systems found to monitor, waiting for systems to be deployed.");
 					try {
